se agregó if en inputs a para evitar el ingreso de muchos caracteres y caracteres que no sean numeros

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -4,6 +4,7 @@ main {
     font-size: $font-size-h1;
     text-align: center;
     padding: 2rem;
+    margin-top: 1.5rem;
     background-color: rgba(255, 255, 255, 0.692);
     color: black;
     border-radius: 2.5rem;
