--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ main {
     font-size: 3rem;
     text-align: center;
     padding: 2rem;
+    margin-top: 1.5rem;
     background-color: rgba(255, 255, 255, 0.692);
     color: black;
     border-radius: 2.5rem; }
