--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ main {
     flex-direction: column;
     align-items: none;
     justify-content: flex-start;
-    background-color: rgba(255, 255, 255, 0.555);
+    background-color: rgba(255, 255, 255, 0.749);
     margin: 0 2rem 2rem 0;
     padding: 5rem;
     width: 1000px;
@@ -75,7 +75,8 @@ main {
 .jsonTitle {
   text-align: center;
   font-size: 2.5rem;
-  background-color: rgba(77, 77, 77, 0.247); }
+  color: white;
+  background-color: rgba(77, 77, 77, 0.521); }
 
 #jsonRecipeList {
   display: flex;
@@ -94,7 +95,8 @@ main {
 .recipeListTitle {
   font-size: 2.5rem;
   text-align: center;
-  background-color: rgba(77, 77, 77, 0.247); }
+  color: white;
+  background-color: rgba(77, 77, 77, 0.521); }
 
 #divContainer {
   display: flex;
